--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-navigator": "^3.1.5"
   },
   "volta": {
     "node": "12.22.1"
